--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">homeBuch</string>
+    <string name="app_name">домашняя бухгалтерия</string>
     <string name="incomingMoney_text">income</string>
     <string name="costMoney_text">costs</string>
     <string name="allMoney_text">all</string>
