--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="addingNewMoneyMove_text">adding</string>
     <string name="description_text">description</string>
     <string name="description_editText">add a description if necessary</string>
+    <string name="enter_sum">Enter sum</string>
 </resources>
