--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">домашняя бухгалтерия</string>
-    <string name="incomingMoney_text">доходы</string>
-    <string name="costMoney_text">расходы</string>
-    <string name="allMoney_text">все</string>
-    <string name="addNewMovingMoney_text">добавить приход/расход</string>
-    <string name="addingNewMoneyMove_text">добавление</string>
-    <string name="description_editText">добавьте описание</string>
-    <string name="description_text">описание</string>
-    <string name="enter_sum">введите сумму</string>
+    <string name="app_name">Домашняя бухгалтерия</string>
+    <string name="incomingMoney_text">Доходы</string>
+    <string name="costMoney_text">Расходы</string>
+    <string name="allMoney_text">Все</string>
+    <string name="addNewMovingMoney_text">Добавить приход/расход</string>
+    <string name="addingNewMoneyMove_text">Добавление</string>
+    <string name="description_editText">Добавьте описание</string>
+    <string name="description_text">Описание</string>
+    <string name="enter_sum">Введите сумму</string>
     <string name="reports_buttonText">отчеты</string>
+    <string name="receipt_transactions">Приходные операции</string>
+    <string name="expenditure_operations">Расходные операции</string>
+    <string name="input_data_text">Заполните все поля!</string>
 </resources>
