--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -19,5 +19,5 @@
     <string name="input_data_text">Заполните все поля!</string>
     <string name="start">Начать</string>
     <string name="hello">Привет</string>
-    <string name="desc">desc</string>
+    <string name="enter_you_money">сколько у вас денег</string>
 </resources>
