--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,7 @@
     <string name="enter_you_money">Enter you money</string>
     <string name="start">Start</string>
     <string name="hello">Hello</string>
-    <string name="desc">desc</string>
+    <string name="desc" translatable="false">desc</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
