--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="start">Start</string>
     <string name="hello">Hello</string>
     <string name="desc">desc</string>
+    <string name="update">Update</string>
+    <string name="delete">Delete</string>
 </resources>
